syntax = "proto3";

option java_package = "org.example.grpc.common.generated";
option java_multiple_files = true;

message HelloWorldRequest {
  optional string name = 1;
}

message HelloWorldResponse {
  string greeting = 1;
}

service HelloWorldService {
  rpc SayHello(HelloWorldRequest) returns (HelloWorldResponse);
}